<resources>
    <string name="app_name">TAMASAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="viewJobOffers_button">View Job Offers</string>
    <string name="viewJobOffer_button">View Job Offer</string>
    <string name="updateInfo_button">Update Student Info</string>
    <string name="updatestudent_name">New Name</string>
    <string name="updatestudent_jobPreference">New Preference</string>
    <string name="update">Update</string>
    <string name="updatestudent_email">New Email</string>
    <string name="ViewJobPost_button">View Job Postings</string>
    <string name="viewReview_button">View reviews</string>
    <string name="description">Current Information of Student</string>
    <string name="jobpostingspinner_label">Job postings</string>
    <string name="applyToJob">Apply</string>
    <string name="error_label"></string>
    <string name="login_button">Login</string>
    <string name="studentspinner_label">Student</string>
    <string name="newstudent1_hint">Student Name</string>
    <string name="newstudent2_hint">StudentID</string>
    <string name="newstudent_button">Register Student</string>
    <string name="registerstudent_label">If a first time user, please enter information below</string>
    <string name="register_button">Register</string>
    <string name="genOffer_button">Generate Job Object</string>
    <string name="jobofferspinner_label">Job Offers</string>
    <string name="acceptOffer">Accept</string>
    <string name="rejectOffer">Reject</string>
    <string name="genReview_button">Generate Review</string>
    <string name="reviewspinner_label">Reviews</string>
</resources>
