<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mcgill.ecse321.tamasandroid.UpdateInfoActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <EditText
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:id="@+id/updatestudent_name"
            android:hint="@string/updatestudent_name"
            android:layout_weight="1" />

        <EditText
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:id="@+id/updatestudent_email"
            android:hint="@string/updatestudent_email"
            android:layout_weight="1" />

        <EditText
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:id="@+id/updatestudent_jobPreference"
            android:hint="@string/updatestudent_jobPreference"
            android:layout_weight="1" />


        <CheckBox
            android:text="Is a Graduate Student (If left untouched, status will remain the same)"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_weight="1"
            android:onClick="isGrad"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/update"
            android:onClick="Update"/>




    </LinearLayout>

</RelativeLayout>
